// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge: should render Bold Declined 1`] = `
<span
  className="root isBold declined"
>
  Declined
</span>
`;

exports[`Badge: should render Bold Default 1`] = `
<span
  className="root isBold default"
>
  default
</span>
`;

exports[`Badge: should render Bold Expired 1`] = `
<span
  className="root isBold expired"
>
  Expired
</span>
`;

exports[`Badge: should render Bold New 1`] = `
<span
  className="root isBold new"
>
  New
</span>
`;

exports[`Badge: should render Bold Progressing 1`] = `
<span
  className="root isBold progressing"
>
  Progressing
</span>
`;

exports[`Badge: should render Subtle Declined 1`] = `
<span
  className="root declined"
>
  Declined
</span>
`;

exports[`Badge: should render Subtle Default 1`] = `
<span
  className="root default"
>
  default
</span>
`;

exports[`Badge: should render Subtle Expired 1`] = `
<span
  className="root expired"
>
  Expired
</span>
`;

exports[`Badge: should render Subtle New 1`] = `
<span
  className="root new"
>
  New
</span>
`;

exports[`Badge: should render Subtle Progressing 1`] = `
<span
  className="root progressing"
>
  Progressing
</span>
`;
